drobne upravy, nacitanie spravneho uitableviewcell z info tlacitka

--- a/trunk/DMSTrabant/de.lproj/Localizable.strings
+++ b/trunk/DMSTrabant/de.lproj/Localizable.strings
@@ -235,7 +235,7 @@
 "Odlozene polozky" = "Latenten Dienstleistungen";
 
 "Sign" = "Sign";
-"Send email" = "Send email";
+"Send email" = "Send";
 "Email" = "Email";
 "Stav oleje" = "Ölstand";
 "email predmet" = "Die Bescheinigung über die Annahme Ihres Fahrzeugs %@ %@";
