--- a/trunk/DMSTrabant/de.lproj/Localizable.strings
+++ b/trunk/DMSTrabant/de.lproj/Localizable.strings
@@ -248,5 +248,6 @@
 "All packets"="Alle Pakete";
 "ND"="Ersatzteile";
 "PP"="Jobpositionen";
+"SP"="Zubehör";
 "Packet search"="Packet search";
 "Odoslanie emailu"="Senden Abnahmeprotokoll per E-Mail";
